--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,5 +14,10 @@ LazyData: true
 Depends:
   R (>= 3.1.2)
 Imports:
-  sparklyr
+  sparklyr (>= 0.9.9002)
 RoxygenNote: 6.1.0
+Suggests: 
+    testthat,
+    dplyr
+Remotes:
+    rstudio/sparklyr
